public interface ScoreObserver {
    void onScoreChanged(int newScore);
}